# couchbase-rust-starter

./: .gitmodules  .gitpod.yml  Cargo.toml  README.md  dbSetup.nu  setLocalEnv
src/: main.rs
src/common/: default_cluster_options.rs  mod.rs  test_config.rs
