[package]
name = "couchbase-rust-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
serde = "1.0"
serde-binary = { version = "0.5", optional = true }
serde_json = "1.0"
couchbase_connstr = { path = "couchbase-rs/sdk/couchbase-connstr" }
couchbase = { path = "couchbase-rs/sdk/couchbase"}
couchbase_core = { path = "couchbase-rs/sdk/couchbase-core", default-features = false }
uuid = { version = "1.10.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11"
envconfig = "0.11.0"